# rendertext

./: LICENSE  rendertext.cabal
app/: Main.hs
