name:                rendertext
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rendertext#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , data/basic.frag
                   , data/basic.vert
cabal-version:       >=1.10
data-files:          data/basic.frag
                   , data/basic.vert

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , OpenGLRaw
                     , text
  default-language:    Haskell2010

executable rendertext-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rendertext
                     , OpenGLRaw
                     , sdl2
                     , text
                     , pango
                     , cairo
  default-language:    Haskell2010

test-suite rendertext-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rendertext
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rendertext
